<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lighterBlue"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lighterBlue"
        tools:context=".MainActivity">


        <EditText
            android:id="@+id/inputMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/inputMessage"
            android:textColorHint="@color/paleBlue"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:textColor="@color/paleBlue"
            android:inputType="text"
            android:importantForAutofill="no"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


            <Button
                android:id="@+id/encryptButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/encryptButton"
                android:textColor="@color/lighterBlue"
                android:background="@drawable/rounded_button"
                app:layout_constraintTop_toBottomOf="@id/inputMessage"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/guideline"
                app:layout_constraintVertical_bias="0.1"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintWidth_percent="0.4"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp" />

            <Button
                android:id="@+id/shareButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shareButton"
                android:textColor="@color/lighterBlue"
                android:background="@drawable/rounded_button"
                app:layout_constraintTop_toBottomOf="@id/inputMessage"
                app:layout_constraintStart_toEndOf="@id/guideline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintVertical_bias="0.1"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintWidth_percent="0.4"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />


        <!-- Encryption Section -->
        <TextView
            android:id="@+id/encryptedMessage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textColor="@color/paleBlue"
            app:layout_constraintTop_toBottomOf="@id/encryptButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/encryptionKey"
            android:layout_marginTop="16dp"
            android:textSize="9pt" />


        <TextView
            android:id="@+id/encryptionKey"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textColor="@color/paleBlue"
            app:layout_constraintTop_toBottomOf="@id/encryptedMessage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            android:textSize="9pt"/>



        <View
            android:id="@+id/separator"
            android:layout_width="0dp"
            android:layout_height="10dp"
            android:background="@color/paleBlue"
            app:layout_constraintTop_toBottomOf="@id/encryptionKey"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            android:layout_marginTop="32dp" />



        <EditText
            android:id="@+id/encryptedMessageInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/encryptedMessage"
            android:textColorHint="@color/paleBlue"
            app:layout_constraintTop_toBottomOf="@id/separator"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="48dp"
            android:paddingBottom="12dp"
            android:textColor="@color/paleBlue"
            android:inputType="text"
            android:importantForAutofill="no" />


        <EditText
            android:id="@+id/decryptionKeyInput"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:hint="@string/decryptionKey"
            android:textColorHint="@color/paleBlue"
            app:layout_constraintTop_toBottomOf="@id/encryptedMessageInput"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/paleBlue"
            android:inputType="text"
            android:importantForAutofill="no" />




        <Button
            android:id="@+id/decryptButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/decryptButton"
            android:textColor="@color/lighterBlue"
            android:background="@drawable/rounded_button"
            style="?android:attr/buttonBarButtonStyle"
            app:layout_constraintTop_toBottomOf="@id/decryptionKeyInput"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:layout_gravity="center_horizontal"
            tools:ignore="VisualLintButtonSize" />



        <TextView
            android:id="@+id/decryptedMessageTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/decryptButton"
            android:layout_marginTop="16dp"
            android:textColor="@color/paleBlue"
            app:layout_constraintTop_toBottomOf="@id/decryptButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:textAlignment="center"
            android:textSize="10pt"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
